--- a/styleSheet1.css
+++ b/styleSheet1.css
@@ -1,7 +1,13 @@
 ﻿div#text {
 	text-align: center;
 }
+
 .image {
 	width: 300px;
 	height: 300px;
+}
+
+.dessertImage {
+	width: 250px;
+	height: 250px;
 }
