--- a/styleSheet1.css
+++ b/styleSheet1.css
@@ -5,9 +5,14 @@
 .image {
 	width: 300px;
 	height: 300px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 .dessertImage {
 	width: 250px;
 	height: 250px;
 }
+
+  
