--- a/styleSheet1.css
+++ b/styleSheet1.css
@@ -2,12 +2,15 @@
 	text-align: center;
 }
 
+div#imageLinks {
+
+}
+
 .image {
 	width: 300px;
 	height: 300px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
+	margin: 2px;
+	border: 5px solid #FFF;
 }
 
 .dessertImage {
