--- a/Homepage.css
+++ b/Homepage.css
@@ -1,15 +1,7 @@
-.left {
-  text-align: left;
-}
-
-.middle {
-  text-align: middle;
-}
-
-.right {
- text-align: right; 
-}
-
-table {
-	width: 100%;
+body{
+	background-color: #0f8777;
+	color: #ff3503;
+	text-align: center;
+	font-size: 24px;
+	font-family: Boogaloo; 
 }
