--- a/Homepage.css
+++ b/Homepage.css
@@ -1,7 +1,7 @@
 body{
-	background-color: #0f8777;
-	color: #ff3503;
+	background-color: #ff0303;
+	color: #000000;
 	text-align: center;
 	font-size: 24px;
-	font-family: Boogaloo; 
+	font-family: Jua; 
 }
