--- a/Homepage.css
+++ b/Homepage.css
@@ -5,24 +5,24 @@ body{
 	font-size: 24px;
 	font-family: Jua; 
 }
-div.red{
+h1.red{
 	color:#ff0000;
 }
-div.orange{
+h1.orange{
 color: #ff7b00
 }
-div.yellow{
+h1.yellow{
 color: #fff700;
 }
-div.green{
+h1.green{
 color: #44ff00;
 }
-div.blue{
+h1.blue{
 color: #0059ff;
 }
-div.purple{
+h1.purple{
 color: #b300ff;
 }
-div.pink{
+h1.pink{
 color: #ff00b7;
 }
