--- a/Homepage.css
+++ b/Homepage.css
@@ -1,6 +1,6 @@
 body{
 	background-color: #000000;
-	color: #ffffff;
+	color: #000000;
 	text-align: center;
 	font-size: 24px;
 	font-family: Jua; 
