--- a/Homepage.css
+++ b/Homepage.css
@@ -4,7 +4,10 @@ body{
 	text-align: center;
 	font-size: 24px;
 	font-family: Jua; 
-	background-image: url(HomepageImages/Cake.png)
+	background-image: url(HomepageImages/Cake.png);
+	width: 300px;
+	height: 300px;
+
 }
 .red{
 	color:#ff0000;
